[package]
name = "postgres_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres-rustls = "0.9"
rustls = "0.20"
webpki-roots = "0.22"